// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shoud correctly render ExpensesSummary with  more than 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,366,775,423.19
  </h1>
</div>
`;

exports[`shoud correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;
